--- a/contrib/languages/fr.xml
+++ b/contrib/languages/fr.xml
@@ -10,10 +10,11 @@
 		<description lang="fr">Ce MOD permet de planifier un délestage automatique des entrées des journaux d'administration et modération, qui remontent à plus de X jours définissables depuis l'administration</description>
 		<author-notes lang="en">A idea from Lolovoisin</author-notes>
 		<author-notes lang="fr">Une idée le Lolo le bon voisin</author-notes>
+		<github><![CDATA[https://github.com/phpbb-fr-com/mod_auto_prune_logs]]></github>
 		<author-group>
 			<author>
-				<realname><![CDATA[phpBB-fr MODs Team]]></realname>
-				<username><![CDATA[phpBB-fr MODs Team]]></username>
+				<realname><![CDATA[phpBB-fr Team]]></realname>
+				<username><![CDATA[phpBB-fr Team]]></username>
 				<homepage><![CDATA[http://www.phpbb-fr.com]]></homepage>
 				<contributions-group>
 					<contributions status="current" from="2012-12-28" position="Developer"/>
