--- a/contrib/languages/fr.xml
+++ b/contrib/languages/fr.xml
@@ -1,15 +1,15 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <?xml-stylesheet type="text/xsl" href="modx.prosilver.en.xsl"?>
-<!--For security purposes, please check: http://www.phpbb.com/mods/ for the latest version of this MOD. Although MODs are checked before being allowed in the MODs Database there is no guarantee that there are no security problems within the MOD. No support will be given for MODs not found within the MODs Database which can be found at http://www.phpbb.com/mods/-->
+<!--For security purposes, please check: https://www.phpbb.com/mods/ for the latest version of this MOD. Although MODs are checked before being allowed in the MODs Database there is no guarantee that there are no security problems within the MOD. No support will be given for MODs not found within the MODs Database which can be found at https://www.phpbb.com/mods/-->
 <mod xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://www.phpbb.com/mods/xml/modx-1.2.6.xsd">
 	<header>
 		<license><![CDATA[http://opensource.org/licenses/gpl-license.php GNU General Public License v2]]></license>
-		<title lang="en">Auto Prune Logs</title>
-		<title lang="fr">Délestage automatique des journaux</title>
-		<description lang="en">This MOD allows you to schedule an automatic prune of entries of Administration log and Moderation log, which are older than X days. Configuration through the ACP.</description>
-		<description lang="fr">Ce MOD permet de planifier un délestage automatique des entrées des journaux d'administration et modération, qui remontent à plus de X jours définissables depuis l'administration</description>
-		<author-notes lang="en">A idea from Lolovoisin</author-notes>
-		<author-notes lang="fr">Une idée le Lolo le bon voisin</author-notes>
+		<title lang="en"><![CDATA[Auto Prune Logs - French Language]]></title>
+		<title lang="fr"><![CDATA[Délestage automatique des journaux - Langue Française]]></title>
+		<description lang="en"><![CDATA[This MOD allows you to schedule an automatic prune of entries of Administration log and Moderation log, which are older than X days. Configuration through the ACP.]]></description>
+		<description lang="fr"><![CDATA[Ce MOD permet de planifier un délestage automatique des entrées des journaux d'administration et modération, qui remontent à plus de X jours définissables depuis l'administration.]]></description>
+		<author-notes lang="en"><![CDATA[An idea of Lolovoisin.]]></author-notes>
+		<author-notes lang="fr"><![CDATA[Une idée de Lolo le bon voisin.]]></author-notes>
 		<github><![CDATA[https://github.com/phpbb-fr-com/mod_auto_prune_logs]]></github>
 		<author-group>
 			<author>
@@ -23,47 +23,51 @@
 			<author>
 				<realname><![CDATA[Erwan NADER]]></realname>
 				<username><![CDATA[ErnadoO]]></username>
-				<email><![CDATA[ernadoo@phpbb-services.com]]></email>
 				<homepage><![CDATA[http://www.phpbb-services.com]]></homepage>
+				<email><![CDATA[ernadoo@phpbb-services.com]]></email>
 				<contributions-group>
 					<contributions status="past" position="Initial MOD Developer"/>
 				</contributions-group>
 			</author>
 		</author-group>
-
 		<mod-version>1.0.1</mod-version>
-
 		<installation>
 			<level>easy</level>
 			<time>180</time>
 			<target-version>3.0.11</target-version>
 		</installation>
-
 		<history>
 			<entry>
-				<date>2012-12-28</date>
+				<date>2013-01-12</date>
 				<rev-version>1.0.1</rev-version>
 				<changelog lang="en">
-					<change>Fix: UMIL installation</change>
-					<change>Add: UMIL installation</change>
-					<change>Add: English language</change>
+					<change><![CDATA[Fix: $config['prune_log_next_time'] not properly set]]></change>
+					<change><![CDATA[Fix: 'Undefined variable' issue from common.php]]></change>
+					<change><![CDATA[Add: Installation via UMIL]]></change>
+					<change><![CDATA[Add: English language]]></change>
+					<change><![CDATA[change: MODx upgrade to version 1.2.6]]></change>
+					<change><![CDATA[Code enhanced]]></change>
 				</changelog>
 				<changelog lang="fr">
-					<change>Première version public...</change>
+					<change><![CDATA[Correction : $config['prune_log_next_time'] non initialisé correctement]]></change>
+					<change><![CDATA[Correction : Erreur 'Undefined variable' dans common.php]]></change>
+					<change><![CDATA[Ajout : Installation via UMIL]]></change>
+					<change><![CDATA[Ajout : Langue anglaise]]></change>
+					<change><![CDATA[Modification : Mise à jour de MODx en version 1.2.6]]></change>
+					<change><![CDATA[Amélioration du code]]></change>
 				</changelog>
 			</entry>
 			<entry>
 				<date>2008-01-18</date>
 				<rev-version>1.0.0</rev-version>
 				<changelog lang="en">
-					<change>First public realease...</change>
+					<change><![CDATA[First public release...]]></change>
 				</changelog>
 				<changelog lang="fr">
-					<change>Première version public...</change>
+					<change><![CDATA[Première version publique...]]></change>
 				</changelog>
 			</entry>
 		</history>
-
 		<link-group>
 			<link type="parent" href="../../install.xml" lang="en">Parent MOD installation</link>
 			<link type="parent" href="../../install.xml" lang="fr">Fichier d’installation parent</link>
@@ -71,24 +75,7 @@
 	</header>
 	<action-group>
 		<copy>
-			<file from="root/language/fr/mods/*.*" to="language/fr/mods/*.*" />
+			<file from="root/language/fr/mods/info_acp_auto_prune_logs.php" to="language/fr/mods/info_acp_auto_prune_logs.php" />
 		</copy>
-		<open src="language/fr/acp/board.php">
-			<edit>
-				<find><![CDATA[?>]]></find>
-				<action type="before-add"><![CDATA[//-- mod : Auto Prune Logs --------------------------------------------------------
-//-- add
-
-// Maintenance settings
-$lang = array_merge($lang, array(
-	'AUTO_PRUNE_ADMIN_LOG'			=> 'Ancienneté maximale des entrées du journal d’administration',
-	'AUTO_PRUNE_ADMIN_LOG_EXPLAIN'	=> 'Toutes les actions répertoriés dans le journal d’administration datant d’avant cette valeur seront supprimées. Laissez 0 pour désactiver cette tâche',
-	'AUTO_PRUNE_MOD_LOG'			=> 'Ancienneté maximale des entrées du journal de modération',
-	'AUTO_PRUNE_MOD_LOG_EXPLAIN'	=> 'Toutes les actions répertoriés dans le journal de modération datant d’avant cette valeur seront supprimées. Laissez 0 pour désactiver cette tâche',
-	'AUTO_PRUNE_LOG_DAYS'			=> 'Intervalle entre chaque vérification',
-));
-//-- end : Auto Prune Logs --------------------------------------------------------]]></action>
-			</edit>
-		</open>
 	</action-group>
 </mod>
